Bug 167466 - Entering anything into the search box under Tools / Options causes LibreOffice 25.8.0.1 to instantly crash.
Summary: Entering anything into the search box under Tools / Options causes LibreOffic...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.1 target:25...
Keywords: bibisected, bisected, regression
: 167499 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-11 14:24 UTC by GVS
Modified: 2025-08-08 10:49 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
WinDbg stacktrace (52.98 KB, text/plain)
2025-07-11 15:11 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description GVS 2025-07-11 14:24:45 UTC
Description:
Entering any text into the search box under Tools / Options causes LibreOffice Writer, version 25.8.0.1, to instantly crash every time.

Does not occur in Calc, Impress, or Base.   

Happens on both of my Windows 10, and Windows 11 machines. It happens on all the computers in our home that run Windows, and this version of LibreOffice.

Happens with or without hardware acceleration, or Skia enabled or disabled.

There is no circumstance that it does not crash Writer.

Actual Results:
Open Writer
Click Tools menu
Click Options
Type any character into the seach box in top left.

Expected Results:
LibreOffice writer instantly crashes.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Not crash. It should search for the characters entered, as it does in all the other apps in LibreOffice.

Version: 25.8.0.1 (X86_64)
Build ID: 127f2cf27c25aaac008a1045ebfed22015cb3064
CPU threads: 2; OS: Windows 10 X86_64 (build 19045); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 1 m_a_riosv 2025-07-11 14:40:46 UTC
Reproducible

Version: 25.8.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 256737875d23442cb14c34d5168779e525c5f5e3
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7ef1c437f30b0869a5b9fa33809bac2c6665ace3
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-US
Calc: CL threaded



Latest version that works on the ones I have installed.
Version: 25.2.5.1 (X86_64) / LibreOffice Community
Build ID: 484541f705153d4ff78284873b0153c3e5a280db
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Xisco Faulí 2025-07-11 15:10:32 UTC
Regression introduced by

commit ca6b1677cc3d923f0c13b2253b48a0ea90485b41	[log]
author	Xisco Fauli <xiscofauli@libreoffice.org>	Tue Jun 03 11:59:57 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Wed Jun 04 11:29:43 2025 +0200
tree cc93bdeb5faf61b83d5cdc28b55390634d873140
parent 10e25ace0eaffe8f9ba8049702589dc363f2ff0b [diff]

sw: no need to create a dummy attr pool
Comment 3 V Stuart Foote 2025-07-11 15:11:07 UTC
Created attachment 201758 [details]
WinDbg stacktrace

Confirmed on the pre-b2 build from 20250707

Version: 25.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 3de369a68b3b49bbdf78d5773bdbe20c2e703b99
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Get this trace, full process stack attached.

mergedlo!SfxItemPool::GetUserOrPoolDefaultItem+0x3a:
00007ffa`9447f35a 0fb74878        movzx   ecx,word ptr [rax+78h] ds:00000000`00000078=????
0:000> !Analyze -v
ext has no Analyze export
0:000> g
(6ef8.fbc): Access violation - code c0000005 (!!! second chance !!!)
mergedlo!SfxItemPool::GetUserOrPoolDefaultItem+0x3a:
00007ffa`9447f35a 0fb74878        movzx   ecx,word ptr [rax+78h] ds:00000000`00000078=????
0:000> ~* kp

.  0  Id: 6ef8.fbc Suspend: 1 Teb: 00000077`99fed000 Unfrozen "VCL Main"
 # Child-SP          RetAddr               Call Site
00 00000077`9a98cc80 00007ffa`9629c5bd     mergedlo!SfxItemPool::GetUserOrPoolDefaultItem+0x3a
01 00000077`9a98ccb0 00007ffa`9626f0cc     mergedlo!GetSpecialCharsForEdit+0xd481d
02 00000077`9a98cd90 00007ffa`9626d8b7     mergedlo!GetSpecialCharsForEdit+0xa732c
03 00000077`9a98ced0 00007ffa`9626d3c7     mergedlo!GetSpecialCharsForEdit+0xa5b17
04 00000077`9a98cf70 00007ffa`9588ffc2     mergedlo!GetSpecialCharsForEdit+0xa5627
05 00000077`9a98cfa0 00007ffa`d3129c01     mergedlo!Scheduler::CallbackTaskScheduling+0x1472
06 00000077`9a98d3b0 00007ffa`d31237b1     vclplug_winlo!create_SalInstance+0x7a61
07 00000077`9a98d3e0 00007ffa`d31238b0     vclplug_winlo!create_SalInstance+0x1611
08 00000077`9a98d590 00007ffb`5efe81d6     vclplug_winlo!create_SalInstance+0x1710
09 00000077`9a98d630 00007ffb`5efe5d2d     USER32!UserCallWinProcCheckWow+0x356
0a 00000077`9a98d790 00007ffa`d31228f6     USER32!DispatchMessageWorker+0x1dd
0b 00000077`9a98d810 00007ffa`d3122c46     vclplug_winlo!create_SalInstance+0x756
0c 00000077`9a98d860 00007ffa`d312302d     vclplug_winlo!create_SalInstance+0xaa6
0d 00000077`9a98da30 00007ffa`958a6d56     vclplug_winlo!create_SalInstance+0xe8d
0e 00000077`9a98da60 00007ffa`9537afaf     mergedlo!Application::Execute+0x476
0f 00000077`9a98dc00 00007ffa`95840909     mergedlo!Dialog::Execute+0x8f
10 00000077`9a98dc50 00007ffa`96276f37     mergedlo!SalInstanceWidget::draw+0x2ba9
11 00000077`9a98dc80 00007ffa`93f4ff98     mergedlo!GetSpecialCharsForEdit+0xaf197
12 00000077`9a98dcc0 00007ffa`93fd3ae4     mergedlo!SfxApplication::OfaExec_Impl+0x16a8
13 00000077`9a98dfd0 00007ffa`93fd5e4c     mergedlo!SfxDispatcher::Call_Impl+0x264
14 00000077`9a98e090 00007ffa`93fcba33     mergedlo!SfxDispatcher::Execute_+0xec
15 00000077`9a98e0e0 00007ffa`9401b79c     mergedlo!SfxBindings::Execute_Impl+0x4e3
16 00000077`9a98e1f0 00007ffa`94018ec2     mergedlo!SvxCharView::~SvxCharView+0x522c
17 00000077`9a98e580 00007ffa`93766f56     mergedlo!SvxCharView::~SvxCharView+0x2952
18 00000077`9a98e630 00007ffa`9545a7c6     mergedlo!com_sun_star_comp_framework_LangSelectionStatusbarController_get_implementation+0x46b6
19 00000077`9a98e6b0 00007ffa`95b0bd4c     mergedlo!vcl::Window::ImplAsyncFocusHdl+0x2596
1a 00000077`9a98e9b0 00007ffa`d31a4378     mergedlo!SalFrame::CallCallback+0x1c
1b 00000077`9a98e9e0 00007ffa`d31a496d     vclplug_winlo!dtrans_CWinClipboard_get_implementation+0x4dcd8
1c 00000077`9a98ec90 00007ffb`5efe81d6     vclplug_winlo!dtrans_CWinClipboard_get_implementation+0x4e2cd
1d 00000077`9a98ed20 00007ffb`5efe5d2d     USER32!UserCallWinProcCheckWow+0x356
1e 00000077`9a98ee80 00007ffa`d31228f6     USER32!DispatchMessageWorker+0x1dd
1f 00000077`9a98ef00 00007ffa`d3122b89     vclplug_winlo!create_SalInstance+0x756
20 00000077`9a98ef50 00007ffa`d312302d     vclplug_winlo!create_SalInstance+0x9e9
21 00000077`9a98f120 00007ffa`958a6d56     vclplug_winlo!create_SalInstance+0xe8d
22 00000077`9a98f150 00007ffa`958a69e5     mergedlo!Application::Execute+0x476
23 00000077`9a98f2f0 00007ffa`9430dee4     mergedlo!Application::Execute+0x105
24 00000077`9a98f330 00007ffa`958ba690     mergedlo!cppu::WeakImplHelper<com::sun::star::container::XChild,com::sun::star::document::XDocumentPropertiesSupplier,com::sun::star::document::XCmisDocument,com::sun::star::rdf::XDocumentMetadataAccess,com::sun::star::document::XDocumentRecovery2,com::sun::star::document::XUndoManagerSupplier,com::sun::star::document::XShapeEventBroadcaster,com::sun::star::document::XDocumentEventBroadcaster,com::sun::star::lang::XEventListener,com::sun::star::document::XEventsSupplier,com::sun::star::document::XEmbeddedScripts,com::sun::star::document::XScriptInvocationContext,com::sun::star::frame::XModel3,com::sun::star::util::XModifiable2,com::sun::star::view::XPrintable,com::sun::star::view::XPrintJobBroadcaster,com::sun::star::frame::XStorable2,com::sun::star::frame::XLoadable,com::sun::star::script::XStarBasicAccess,com::sun::star::document::XViewDataSupplier,com::sun::star::util::XCloseable,com::sun::star::datatransfer::XTransferable,com::sun::star::document::XDocumentSubStorageSupplier,com::sun::star::document::XStorageBasedDocument,com::sun::star::script::provider::XScriptProviderSupplier,com::sun::star::ui::XUIConfigurationManagerSupplier,com::sun::star::embed::XVisualObject,com::sun::star::lang::XUnoTunnel,com::sun::star::frame::XModule,com::sun::star::frame::XTitle,com::sun::star::frame::XTitleChangeBroadcaster,com::sun::star::frame::XUntitledNumbers>::acquire+0xb364
25 00000077`9a98fae0 00007ffa`94334b35     mergedlo!ImplSVMain+0xe0
26 00000077`9a98fb20 00007ff6`9d16101b     mergedlo!soffice_main+0x2e5
27 00000077`9a98fc30 00007ff6`9d1612d4     soffice!main+0x1b
28 00000077`9a98fc60 00007ffb`5e55e8d7     soffice!main+0x2d4
29 00000077`9a98fca0 00007ffb`5f4bc34c     KERNEL32!BaseThreadInitThunk+0x17
2a 00000077`9a98fcd0 00000000`00000000     ntdll!RtlUserThreadStart+0x2c
Comment 4 Xisco Faulí 2025-07-11 17:06:19 UTC
Actually the crash is caused by the LibreOffice Writer/Web - Background tab. If you try to open it it will crash as well.
In a debug build, it fails at

soffice.bin: /mnt/4d311c06-5193-4f61-a3f6-53ca4d9ea1e1/libreoffice/svl/source/items/itempool.cxx:725: const SfxPoolItem& SfxItemPool::GetUserOrPoolDefaultItem(sal_uInt16) const: Assertion `!"unknown which - don't ask me for defaults"' failed.

@Noel, Armin, I don't know much about itemspools but I'm wondering whether my patch ca6b1677cc3d923f0c13b2253b48a0ea90485b41 uncovered a previous bug in the background not having a default item
Comment 5 Xisco Faulí 2025-07-11 18:02:50 UTC
My take on it is to drop the background tab for good: https://gerrit.libreoffice.org/c/core/+/187754
Comment 6 Commit Notification 2025-07-12 08:47:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/08cb3671487b9e28a0bae3b133260e144d7e1160

tdf#167466: drop background tab from Writer/Web options tree

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 m_a_riosv 2025-07-14 03:08:29 UTC
*** Bug 167499 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2025-07-14 14:33:54 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bb22aab5200c334627e5da2cab6c8e84ce86ca7d

tdf#49895, tdf#167466: sw: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-08-08 10:47:59 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/c1636be457d79a0c962ad096d297d800e642ab32

tdf#167466: drop background tab from Writer/Web options tree

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-08-08 10:49:02 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-0":

https://git.libreoffice.org/core/commit/8eb123f94540974053ab5c0f6f592d79b31e61b2

tdf#167466: drop background tab from Writer/Web options tree

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.