tdf#167466: drop background tab from Writer/Web options tree

it started to crash after
commit ca6b1677cc3d923f0c13b2253b48a0ea90485b41
Author: Xisco Fauli <xiscofauli@libreoffice.org>
Date:   Tue Jun 3 11:59:57 2025 +0200

    sw: no need to create a dummy attr pool

because that target pool is nullptr in SfxItemPool::GetUserOrPoolDefaultItem
now.

After some testing, there are some reasons why I believe it should be
dropped:
* Although it's an Writer/Web option it only works on Web ( File - New -
  HTML document )
* Even if set in a web document, it won't be exported to html. To do so,
it has to be set in the Page Style dialog
* The document background can be changed from the Apperance tab so
basically this tab is duplicated now

This issue would have be caught if tdf#49895 had a test.
I will write a UItest in a follow-up commit

Change-Id: I3087a6942b9e5406de936fdde47d4c9143be55e8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187754
Tested-by: Jenkins
Reviewed-by: Sahil Gautam <sahil.gautam@collabora.com>